# Choreo

./: .gitignore  .wpiformat  404.html  Cargo.toml  build.rs  force-upgrade-deps.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  run.sh  sitemap.xml  tauri.conf.json
.github/workflows/: build.yml  choreo.yml  lint-format.yml  trajoptlib-cpp.yml
api/choreolib/cpp/: AllianceFlipperUtil_8h_source.html  AutoBindings_8h_source.html  AutoChooser_8h_source.html  AutoLoop_8h_source.html  (+80 more)
choreolib/auto-factory/: index.html
choreolib/getting-started/: index.html
choreolib/trajectory-api/: index.html
contributing/building-choreo/: index.html
contributing/building-choreolib/: index.html
contributing/building-docs/: index.html
contributing/contributing-guide/: index.html
contributing/release-process/: index.html
contributing/sample-flipping/: index.html
contributing/schema-upgrade/: index.html
document-settings/: index.html
document-settings/robot-configuration/: index.html
installation/: index.html
src/: main.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
trajoptlib/: .styleguide  CMakeLists.txt  README.md  build.rs
trajoptlib/cmake/: 0001-Downgrade-to-C-20.patch
trajoptlib/src/: DifferentialTrajectoryGenerator.cpp  RustFFI.cpp  RustFFI.hpp  SwerveTrajectoryGenerator.cpp  differential_trajectory_generator.cpp  error.rs  swerve_trajectory_generator.cpp
usage/controls-shortcuts/: index.html
usage/editing-paths/: index.html
usage/estimating-moi/: index.html
usage/saving/: index.html
usage/view-options-panel/: index.html
(+218 files in other folders)
