[package]
name = "choreo"
version = "2025.0.0-beta.9"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "2.1.1", features = [ "devtools"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-os = "2.2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
